# FastReact-PyLib

./: .gitignore  PUBLISH.md  README.md  USAGE.md  main.py  pyproject.toml
fastreact/: __init__.py  cli.py  core.py  flask_core.py  utils.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  card.jsx
frontend/src/pages/: About.jsx  Dashboard.jsx  Home.jsx  Users.jsx
